--- a/.github/workflows/my-cicd.yml
+++ b/.github/workflows/my-cicd.yml
@@ -1,6 +1,12 @@
 name: Deploy to Railway
 
-on: [push, pull_request]
+on: 
+  # Triggers the workflow on push or pull request events but only for the "master" branch
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
 
 jobs:
 
@@ -17,6 +23,7 @@ jobs:
           cache: 'maven'
       - name: Maven Package
         run: mvn -B clean package -DskipTests
+
   test:
     name: Maven Tests
     needs: package
@@ -31,3 +38,16 @@ jobs:
           cache: 'maven'
       - name: Maven Verify
         run: mvn -B clean verify
+
+  deploy:
+    name: Railway Deploy
+    needs: test
+    runs-on: ubuntu-latest  
+    
+    steps:
+      - uses: actions/checkout@v4
+      - uses: devtomio/action-railway@v1.1.4
+        name: Deploy to Railway
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}  
+
