--- a/.github/workflows/my-cicd.yml
+++ b/.github/workflows/my-cicd.yml
@@ -42,12 +42,13 @@ jobs:
   deploy:
     name: Railway Deploy
     needs: test
-    runs-on: ubuntu-latest  
-    
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: devtomio/action-railway@v1.1.4
-        name: Deploy to Railway
+      - name: Install Railway
+        run: npm i -g @railway/cli
+      - name: Deploy to Railway
+        run: railway up --service ${{ secrets.RAILWAY_SERVICE }}
         env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}  
-
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          
