--- a/.github/workflows/my-cicd.yml
+++ b/.github/workflows/my-cicd.yml
@@ -3,9 +3,9 @@ name: Deploy to Railway
 on: 
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 
 jobs:
