--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>exposed-dao</artifactId>
             <version>${exposed-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.exposed</groupId>
+            <artifactId>exposed-java-time</artifactId>
+            <version>${exposed-version}</version>
+        </dependency>
         <!-- postgres driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
